[gd_scene load_steps=2 format=3 uid="uid://dioqu82psu1lc"]

[ext_resource type="Script" path="res://scenes/user interface/title_screen.gd" id="1_liq0c"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_liq0c")

[node name="GameTitle" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = 576.0
offset_bottom = 176.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/bold_font_size = 64
theme_override_font_sizes/italics_font_size = 64
theme_override_font_sizes/bold_italics_font_size = 64
theme_override_font_sizes/mono_font_size = 64
bbcode_enabled = true
text = "[center][rainbow][wave][b]Dakota Duck[/b] in [i]The Dark Slime Dungeon[/i][/wave][/rainbow][/center]"
shortcut_keys_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -50.0
offset_right = 152.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Optionsâ€¦"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
